Fix wrapping on chromium

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,5 +32,10 @@ html, body {
 .content {
         margin: 0 auto;
         max-width: 80ch;
-        word-wrap: anywhere;
+}
+
+.content div {
+        width: 100%;
+        overflow-wrap: break-word;
+        text-align: left;
 }
